# mail-flow

./: .gitignore  .isort.cfg  2025-10-23-connectors-architecture.md  2025-11-05-architecture.md  2025-11-20-status-and-next-steps.md  2025-11-26-status-and-next-steps.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION-PLAN-archive-protocol.md  INTEGRATION-PLAN.md  Makefile  PLAN.md  PROGRESS.md  README.md  TESTING-CHECKLIST.md  contextual  contextual-qtc-data  demo.py  juan-gsk  llmemory  llmring  mutt_macro.txt  pyproject.toml  ruff.toml
.beads/: issues.jsonl  last-touched  sync-state.json
.github/workflows/: ci.yml
archive-protocol/: ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  INTEGRATION.md  README.md  SLACK-CONNECTOR-GUIDE.md  pyproject.toml
archive-protocol/src/archive_protocol/: __init__.py  config.py  exceptions.py  metadata.py  schema.py  utils.py  writer.py
archive-protocol/tests/: __init__.py  conftest.py  test_metadata.py  test_schema.py  test_utils.py  test_writer.py  test_writer_v2.py
docs/: demo.py  examples.md  learning-explained.md  metadata-storage-design.md  roadmap.md  scaling-analysis.md  slack-ingestion-plan.md  testing-checklist.md
docs/indexer/: indexer-contract.md  schema.sql
docs/plans/: 2025-10-24-contextual-feature-parity-design.md  2025-11-25-interactive-tui-design.md  2025-11-25-interactive-tui-implementation.md
docs/specs/: archivist-suite-spec.md
docs/storage/: naming-and-normalization.md
examples/: document_classification.py
src/mailflow/: __init__.py  archivist_client.py  archivist_integration.py  attachment_conversion.py  attachment_handler.py  cli.py  config.py  content_renderer.py  email_extractor.py  exceptions.py  expense_export.py  global_index.py  gmail_api.py  hybrid_classifier.py  indexer.py  linein.py  llm_classifier.py  llmemory_indexer.py  logging_config.py  mcp_server.py  metadata_store.py  models.py  pdf_converter.py  process.py  processed_emails_tracker.py  search.py  security.py  setup.py  similarity.py  text_extract.py  thread_detector.py  tui.py  ui.py  utils.py  workflow.py  workflow_templates.py
src/mailflow/.emacs-bu/: commands.py~  linein.py~
src/mailflow/commands/: gmail_batch_workflows.py  index_search.py
src/mailflow/gdocs/: client.py  ingest.py  storage.py
src/mailflow/slack/: client.py  ingest.py  markdown.py  migrate_contextual.py  storage.py
src/pmail/: __init__.py  attachment_handler.py  cli.py  config.py  email_extractor.py  exceptions.py  gmail_api.py  hybrid_classifier.py  linein.py  llm_classifier.py  logging_config.py  mcp_server.py  metadata_store.py  models.py  pdf_converter.py  process.py  processed_emails_tracker.py  search.py  security.py  setup.py  similarity.py  ui.py  utils.py  workflow.py  workflow_templates.py  worklow.py
src/pmail/.emacs-bu/: process.py~
src/pmail/gdocs/: client.py  ingest.py  storage.py
src/pmail/slack/: ingest.py  migrate_contextual.py  storage.py
tests/: __init__.py  conftest.py  test_archive_layout_v2.py  test_archivist_integration.py  test_attachment_conversion.py  test_attachment_handler.py  test_attachment_metadata.py  test_classifier_integration.py  test_cli_validation.py  test_config.py  test_content_renderer.py  test_create_todo.py  test_dedup_update.py  test_document_info.py  test_email_extractor.py  test_entity_parser.py  test_expense_export.py  test_gate_classifier.py  test_global_indexer.py  test_gmail_api_retry.py  test_hybrid_classifier.py  test_integration.py  test_learning_process.py  test_llm_classifier.py  test_llmemory_indexer.py  test_maildir_discovery.py  test_metadata_store.py  test_models.py  test_pdf_converter.py  test_pdf_converter_improved.py  test_pdf_extraction_integration.py  test_process_deduplication.py  test_processed_emails_tracker.py  test_save_pdf_workflow.py  test_search_recent.py  test_security.py  test_similarity.py  test_similarity_to_address.py  test_skip_workflow.py  test_slack_and_gdocs_ingest.py  (+5 more)
tests/res/: amazon_invoice.eml  cloudflare_invoice.eml  dropbox_update.eml  github_notification.eml  other_invoice.eml  prodigi_failed.eml
