[project]
name = "pmail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Juan Reyero", email = "juan@juanreyero.com" }
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "black>=25.1.0",
    "click>=8.2.1",
    "gnureadline>=8.2.13",
    "playwright>=1.54.0",
    "pytest>=8.4.1",
]

[project.scripts]
pmail = "pmail.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "ruff>=0.12.7",
]

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]  # Allow assert statements and complexity in tests
