[project]
name = "archive-protocol"
version = "0.1.0"
description = "Shared protocol for multi-source document archiving with consistent metadata"
readme = "README.md"
authors = [
    { name = "Juan Reyero", email = "juan@juanreyero.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "python-dateutil>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]
